--- a/Tema 2 HTML/lista_ordenada.html
+++ b/Tema 2 HTML/lista_ordenada.html
@@ -14,7 +14,7 @@
         <li>Cuarto elemento</li>
     </ol>
 
-    <!-- lista dsordenada -->
+    <!-- lista desordenada -->
     <ul>
         <li>Primer elemento</li>
         <li>Segundo elemento</li>
