--- a/Tema 2 HTML/ej4.html
+++ b/Tema 2 HTML/ej4.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tres en raya</title>
 </head>
 <body>
-    
+    <h1 style="width: 25%;text-align: center;">Tres en raya</h1>
+    <table style="border-style: outset;">
+        <tr style="border-style: ridge;">
+            <td style="border-style: ridge;"></td>
+            <td style="border-style: ridge;">A</td>
+            <td style="border-style: ridge;">B</td>
+            <td style="border-style: ridge;">C</td>
+        </tr>
+        <tr style="border-style: ridge;">
+            <td style="border-style: ridge;">1</td>
+            <td style="border-style: ridge;"><img src="x.PNG" href="x"></td>
+            <td style="border-style: ridge;"></td>
+            <td style="border-style: ridge;"><img src="ok.PNG" href="ok"></td>
+        </tr>
+        <tr style="border-style: ridge;">
+            <td style="border-style: ridge;">2</td>
+            <td style="border-style: ridge;"></td>
+            <td style="border-style: ridge;"><img src="x.PNG" href="x"></td>
+            <td style="border-style: ridge;"></td>
+        </tr>
+        <tr style="border-style: ridge;">
+            <td style="border-style: ridge;">1</td>
+            <td style="border-style: ridge;"><img src="ok.PNG" href="ok"></td>
+            <td style="border-style: ridge;"></td>
+            <td style="border-style: ridge;"><img src="x.PNG" href="x"></td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>Turno para jugador 1:</td>
+        </tr>
+        <tr>
+            <td>
+                <label for="Fila">Fila</label>
+            </td>
+            <td>
+                <input type="number">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="Columna">Columna</label>
+            </td>
+            <td>
+                <input type="number">
+            </td>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <td>
+                <input type="submit" name="Enviar" id="Enviar" value="Enviar">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
